--- a/.github/workflows/cicd-sample.yml
+++ b/.github/workflows/cicd-sample.yml
@@ -7,29 +7,32 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Build Step
-        run: echo "Building the project..."
+        run: echo "Building the project in ${{ job.environment }} environment..."
 
   test:
     runs-on: ubuntu-latest
-
+    needs: build
+    environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Run Tests
-        run: echo "Running tests..."
+        run: echo "Running tests in ${{ job.environment }} environment..."
 
   deploy:
     runs-on: ubuntu-latest
-  
+    needs: test
+    environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Deploy Step
-        run: echo "Deploying application..."
+        run: echo "Deploying application in ${{ job.environment }} environment..."
