--- a/.github/workflows/cicd-sample.yml
+++ b/.github/workflows/cicd-sample.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: dev
+    environment: Dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-    environment: dev
+    environment: Qa
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    environment: dev
+    environment: Stag
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
