--- a/.github/workflows/cicd-sample.yml
+++ b/.github/workflows/cicd-sample.yml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     environment: Stag
+    qa environment:
+     Required reviewers: Naktodesachin
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
