Simplify CI/CD pipeline by removing unnecessary steps
Removed redundant steps for building, testing, and deploying in dev, test, and prod environments.

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,4 +1,4 @@
-name: Multi-Environment CI/CD
+name: Simple Multi Env Pipeline
 
 on:
   push:
@@ -9,63 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Build (DEV)
-        run: echo "Building application for DEV environment"
-
-      - name: Test (DEV)
-        run: echo "Running tests for DEV environment"
-
-      - name: Use Secret (DEV)
-        run: echo "Using DEV password: $DEV_PASSWORD"
-        env:
-          DEV_PASSWORD: ${{ secrets.DEV_PASSWORD }}
-
-      - name: Deploy (DEV)
-        run: echo "Deploying to DEV environment"
+      - uses: actions/checkout@v4
+      - run: echo "Deploying to DEV"
 
   test:
     runs-on: ubuntu-latest
     needs: dev
     environment: test
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Build (TEST)
-        run: echo "Building application for TEST environment"
-
-      - name: Test (TEST)
-        run: echo "Running tests for TEST environment"
-
-      - name: Use Secret (TEST)
-        run: echo "Using TEST password: $TEST_PASSWORD"
-        env:
-          TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
-
-      - name: Deploy (TEST)
-        run: echo "Deploying to TEST environment"
+      - uses: actions/checkout@v4
+      - run: echo "Deploying to TEST"
 
   prod:
     runs-on: ubuntu-latest
     needs: test
     environment: prod
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Build (PROD)
-        run: echo "Building application for PROD environment"
-
-      - name: Test (PROD)
-        run: echo "Running tests for PROD environment"
-
-      - name: Use Secret (PROD)
-        run: echo "Using PROD password: $PROD_PASSWORD"
-        env:
-          PROD_PASSWORD: ${{ secrets.PROD_PASSWORD }}
-
-      - name: Deploy (PROD)
-        run: echo "Deploying to PROD environment"
+      - uses: actions/checkout@v4
+      - run: echo "Deploying to PROD"
