Add secret echo commands to workflow stages
Added echo commands to display environment secrets for DEV, TEST, and PROD stages.

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -10,6 +10,9 @@ jobs:
     environment: dev
     steps:
       - uses: actions/checkout@v4
+      - run: echo "DEV Secret = $MY_SECRET"
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
       - run: echo "Deploying to DEV"
 
   test:
@@ -18,6 +21,9 @@ jobs:
     environment: test
     steps:
       - uses: actions/checkout@v4
+      - run: echo "TEST Secret = $MY_SECRET"
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
       - run: echo "Deploying to TEST"
 
   prod:
@@ -26,4 +32,7 @@ jobs:
     environment: prod
     steps:
       - uses: actions/checkout@v4
+      - run: echo "PROD Secret = $MY_SECRET"
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
       - run: echo "Deploying to PROD"
